embed model files inside the binaries (mfw big changeset oops)

--- a/lyra/BUILD
+++ b/lyra/BUILD
@@ -771,6 +771,7 @@ cc_library(
     ],
     hdrs = [
         "tflite_model_wrapper.h",
+        "lyra_embedded_models.h",
     ],
     deps = [
         "@com_google_absl//absl/memory",
