--- a/lyra/BUILD
+++ b/lyra/BUILD
@@ -33,17 +33,10 @@ config_setting(
 )
 
 cc_library(
-    name = "architecture_utils",
-    hdrs = ["architecture_utils.h"],
-    deps = ["@gulrak_filesystem//:filesystem"],
-)
-
-cc_library(
     name = "lyra_benchmark_lib",
     srcs = ["lyra_benchmark_lib.cc"],
     hdrs = ["lyra_benchmark_lib.h"],
     deps = [
-        ":architecture_utils",
         ":dsp_utils",
         ":feature_extractor_interface",
         ":generative_model_interface",
@@ -815,7 +808,10 @@ cc_test(
 
 cc_test(
     name = "tflite_model_wrapper_test",
-    srcs = ["tflite_model_wrapper_test.cc"],
+    srcs = [
+        "tflite_model_wrapper_test.cc",
+        "model_coeffs/_models.h",
+    ],
     data = ["model_coeffs/lyragan.tflite"],
     deps = [
         ":tflite_model_wrapper",
