Reworking for my purposes as a basic DLL that I can call from C#.

--- a/dll/BUILD
+++ b/dll/BUILD
@@ -1,11 +1,7 @@
 cc_binary(
-    name = "vaudio_lyra",
+    name = "lyra_dll",
     srcs = [
-        "lyravoicecodec.cc",
         "dllmain.cc",
-        "frameencoder.cc",
-        "ivoicecodec.h",
-        "iframeencoder.h",
     ],
     #data = [":tflite_testdata"],
     linkopts = select({
